--- a/src/apps_common/backups/templates/backups/admin/index.html
+++ b/src/apps_common/backups/templates/backups/admin/index.html
@@ -13,7 +13,7 @@
 {% block content %}
   <h2 style="margin-bottom: 3px">{% trans 'Backups' %}</h2>
 
-  <table class="admin-table">
+  <table class="table admin-table table-valign-middle">
     <thead>
     <tr>
       <th>{% trans 'File' %}</th>
@@ -48,6 +48,6 @@
     </tbody>
   </table>
 
-  <a href="create/" class="btn btn-info" style="margin-top: 20px;">{% trans 'Create' %}</a>
+  <a href="create/" class="btn btn-info">{% trans 'Create' %}</a>
 
 {% endblock %}
