--- a/src/static/admin/scss/admin_table.scss
+++ b/src/static/admin/scss/admin_table.scss
@@ -6,22 +6,19 @@
 .admin-table {
   position: relative;
   overflow: hidden;
+  max-width: 100%;
+  width: auto;
   z-index: 2;
-  border-collapse: collapse;
-  @include border_radius(4px 0 0 4px);
+  @include border_radius(4px);
   @include box-shadow(0 0 0 1px rgba(0, 0, 0, 0.07));
 
   thead, tfoot {
-    line-height: 34px;
     background: no-repeat #e5e5e5;
     @include linear-gradient(to bottom, #f3f3f3 0%, #e5e5e5 100%);
     @include background-clip(padding-box);
   }
 
   td, th {
-    padding-left: 10px;
-    padding-right: 10px;
-    min-width: 40px;
     border-right: 1px solid rgba(0, 0, 0, 0.05);
 
     &:last-child {
@@ -30,16 +27,14 @@
   }
 
   thead {
-    @include border_radius(4px 0 0 4px);
-
     td, th {
-      text-align: left;
+      padding-top: 8px;
+      padding-bottom: 8px;
     }
   }
 
   tbody {
     tr {
-      background-color: #fff;
       &:nth-last-of-type(1) {
         td, th {
           border-bottom: 0;
@@ -48,8 +43,6 @@
     }
 
     td, th {
-      padding-top: 10px;
-      padding-bottom: 10px;
       border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     }
   }
@@ -57,6 +50,15 @@
   tfoot {
     td, th {
       border-top: 1px solid rgba(0, 0, 0, 0.05);
+    }
+  }
+
+
+  &.table-valign-middle {
+    tbody {
+      td, th {
+        vertical-align: middle;
+      }
     }
   }
 }
