one more admin fix

--- a/src/static/admin/scss/dl_core.scss
+++ b/src/static/admin/scss/dl_core.scss
@@ -16,6 +16,7 @@ $footer_1col: $media480;
     border-right: none;
 
     h1 {
+      margin-left: 18px;
       margin-top: 8px;
       text-shadow: none;
       font-weight: normal;
