--- a/src/templates/admin/index.html
+++ b/src/templates/admin/index.html
@@ -10,6 +10,6 @@
 {% endblock %}
 
 {% block content %}
-  <h2>{% trans 'Welcome to the Directline Admin Web Application' %}</h2>
+  <h2 style="margin: 0">{% trans 'Welcome to the Directline Admin Web Application' %}</h2>
 {% endblock %}
 
