--- a/src/templates/admin/login.html
+++ b/src/templates/admin/login.html
@@ -5,6 +5,9 @@
 {% load url from suit_compat %}
 
 {% block extrastyle %}{{ block.super }}{% endblock %}
+{% block extrajs %}
+  <script src="{% static "admin/js/dl_login.js" %}"></script>
+{% endblock %}
 
 {% block bodyclass %}login{% endblock %}
 
