--- a/src/static/common/js/plupload/css/jquery.ui.plupload.css
+++ b/src/static/common/js/plupload/css/jquery.ui.plupload.css
@@ -26,12 +26,12 @@
 
 .plupload_filelist_footer {border-width: 1px 0 0 0}
 .plupload_file {border-width: 0 0 1px 0}
-.plupload_container .plupload_header {border-width: 0 0 1px 0; position: absolute; height: 57px; width: 100%;}
+.plupload_container .plupload_header {border-width: 0 0 1px 0; position: relative;}
 
-.plupload_delete .ui-icon,
+.plupload_delete .ui-icon, 
 .plupload_done .ui-icon,
 .plupload_failed .ui-icon {
-	cursor:pointer;
+	cursor:pointer;	
 }
 
 .plupload_header_content {
@@ -68,13 +68,11 @@
 	right: 16px;
 	bottom: 8px;
 	margin: 0;
+	display: none;
 }
 
 .plupload_view_switch .ui-button {
 	margin-right: -0.31em;
-    border: none;
-    background: none;
-    display: inline-block;
 }
 
 .plupload_content {
@@ -120,8 +118,13 @@
 	background-color: #eee;
 }
 
-.plupload_file_loading .plupload_file_thumb {
+.plupload_thumb_loading {
 	background: #eee url(../img/loading.gif) center no-repeat;
+}
+
+.plupload_thumb_loading .plupload_file_dummy,
+.plupload_thumb_embedded .plupload_file_dummy {
+	display: none;
 }
 
 .plupload_file_name {
@@ -141,7 +144,7 @@
 	right: 0;
 }
 
-.plupload_buttons {
+.plupload_buttons { 
 	position: relative;
 }
 
@@ -157,7 +160,7 @@
 	_clear: left;
 }
 
-.plupload_view_list div.plupload_file_size,
+.plupload_view_list div.plupload_file_size, 
 .plupload_view_list div.plupload_file_status,
 .plupload_view_list div.plupload_file_action {
 	padding: 8px 6px;
@@ -184,11 +187,11 @@
 	margin-left: -2px;
 }
 
-.plupload_view_list .plupload_file_size,
+.plupload_view_list .plupload_file_size, 
 .plupload_view_list .plupload_file_status,
-.plupload_filelist_footer .plupload_file_size,
+.plupload_filelist_footer .plupload_file_size, 
 .plupload_filelist_footer .plupload_file_status {
-	text-align: right;
+	text-align: right; 
 	width: 52px;
 }
 
@@ -259,7 +262,7 @@
 }
 
 .plupload_view_thumbs div.plupload_file_status {
-	position: relative;
+	position: relative;	
 	height: 3px;
 	overflow: hidden;
 	text-indent: -999px;
@@ -273,7 +276,7 @@
 
 .plupload .ui-sortable-helper,
 .plupload .ui-sortable .plupload_file {
-	cursor:move;
+	cursor:move;	
 }
 
 .plupload_file_action {width: 16px;}
@@ -332,7 +335,7 @@
 .plupload_message {
 	position: absolute;
 	top: -1px;
-	left: -1px;
+	left: -1px;	
 	height: 100%;
 	width: 100%;
 }
@@ -343,28 +346,28 @@
 }
 
 .plupload_message strong {
-	font-weight: bold;
+	font-weight: bold;	
 }
 
 .plupload_message i {
-	font-style: italic;
+	font-style: italic;	
 }
 
 .plupload_message p span.ui-icon {
 	float: left;
-	margin-right: 0.3em;
+	margin-right: 0.3em;	
 }
 
 .plupload_header_content .ui-state-error,
 .plupload_header_content .ui-state-highlight {
-	border:none;
+	border:none;	
 }
 
 .plupload_message_close {
 	position:absolute;
 	top:5px;
 	right:5px;
-	cursor:pointer;
+	cursor:pointer;	
 }
 
 .plupload .ui-sortable-placeholder {
