--- a/src/static/scss/section_slider.scss
+++ b/src/static/scss/section_slider.scss
@@ -1,7 +1,7 @@
 @import 'mixins';
 
 /*
-    Для случая слайдера фоток на фоне блока с единым контентом под все слайды.
+    Для случая слайдера фоток на фоне блока с фиксированным контентом.
 
     Если блок должен быть на всю высоту, то в JS следует создавать
     WinHeightSlider вместо обычного Slider.
@@ -69,6 +69,12 @@
 
     .slider-item ~ .slider-item {
       display: none;
+    }
+
+    // чтоб не было видно уменьшение картинки
+    // до того, как отрабатывает JS
+    .slider-item:first-child {
+      max-width: 100%;
     }
   }
 
