--- a/src/apps/main/static/main/scss/index.scss
+++ b/src/apps/main/static/main/scss/index.scss
@@ -32,7 +32,7 @@
     @include flex-grow(1);
     @include media_interval($media1024, 0) {
       // 4 items
-      max-width: calc((100% - 3 * 20px) / 4);
+      width: calc((100% - 3 * 20px) / 4);
       &:nth-child(n+4) {
         margin-right: 0;
       }
@@ -42,7 +42,7 @@
     }
     @include media_interval($media640, $media1024) {
       // 3 items
-      max-width: calc((100% - 2 * 20px) / 3);
+      width: calc((100% - 2 * 20px) / 3);
       &:nth-child(n+3) {
         margin-right: 0;
       }
@@ -52,7 +52,7 @@
     }
     @include media_interval($media400, $media640) {
       // 2 items
-      max-width: calc((100% - 20px) / 2);
+      width: calc((100% - 20px) / 2);
       &:nth-child(n+2) {
         margin-right: 0;
       }
