head_core => core

--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -21,7 +21,7 @@
   {# === STYLES === #}
   <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/x-icon"/>
   <link rel="apple-touch-icon-precomposed" sizes="32x32" href="{% static 'img/favicon.png' %}">
-  {% stylesheet 'head_core' %}
+  {% stylesheet 'core' %}
 
   {# === SCRIPTS === #}
   <script>
