--- a/src/apps/users/templates/users/login.html
+++ b/src/apps/users/templates/users/login.html
@@ -32,6 +32,10 @@
           <button type="submit" class="btn">{% trans 'Sign in' %}</button>
         </fieldset>
       </form>
+
+      <script>
+        document.getElementById('id_username').focus();
+      </script>
     </div>
   </div>
 {% endblock content %}
