--- a/src/apps/users/templates/users/register.html
+++ b/src/apps/users/templates/users/register.html
@@ -42,6 +42,10 @@
           <button type="submit" class="btn">{% trans 'Register' %}</button>
         </fieldset>
       </form>
+
+      <script>
+        document.getElementById('id_username').focus();
+      </script>
     </div>
   </div>
 {% endblock content %}
