--- a/src/apps/users/templates/users/reset.html
+++ b/src/apps/users/templates/users/reset.html
@@ -26,6 +26,10 @@
           <button type="submit" class="btn">{% trans 'Continue' %}</button>
         </fieldset>
       </form>
+
+      <script>
+        document.getElementById('id_email').focus();
+      </script>
     </div>
   </div>
 {% endblock content %}
