--- a/src/apps/users/templates/users/reset_confirm.html
+++ b/src/apps/users/templates/users/reset_confirm.html
@@ -31,6 +31,10 @@
           <button type="submit" class="btn">{% trans 'Save' %}</button>
         </fieldset>
       </form>
+
+      <script>
+        document.getElementById('id_new_password1').focus();
+      </script>
     </div>
   </div>
 {% endblock content %}
