--- a/src/apps_common/menu/static/menu/scss/menu.scss
+++ b/src/apps_common/menu/static/menu/scss/menu.scss
@@ -97,6 +97,7 @@ $mobile_active_color: $menu_active_color;
     display: inline-block;
     padding: 5px;
     font-weight: bold;
+    vertical-align: top;
     @include font-size(22px, 28px);
 
     &:hover {
