--- a/src/templates/pipeline/js.html
+++ b/src/templates/pipeline/js.html
@@ -1,1 +1,1 @@
-<script>window.loadJS("{{ url }}", {{ async|yesno:"1,0" }})</script>
+<script>window.loadOnloadJS("{{ url }}", {{ async|yesno:"1,0" }})</script>
