--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -82,6 +82,7 @@
     {% endblock footer %}
   </div>
 
+  <script src="{% url 'jsi18n' %}" defer></script>
   <!--[if lte IE 9]>
     <script src="{% static 'polyfills/es5_polyfill.js' %}" defer></script>
   <![endif]-->
