--- a/src/apps/main/static/main/scss/index.scss
+++ b/src/apps/main/static/main/scss/index.scss
@@ -29,10 +29,10 @@
     margin-right: 20px;
     cursor: pointer;
     @include border-box;
-    @include flex-grow(1);
+    @include flex(1 0 0);
     @include media_interval($media1024, 0) {
       // 4 items
-      width: calc((100% - 3 * 20px) / 4);
+      max-width: calc((100% - 3 * 20px) / 4);
       &:nth-child(n+4) {
         margin-right: 0;
       }
@@ -42,7 +42,7 @@
     }
     @include media_interval($media640, $media1024) {
       // 3 items
-      width: calc((100% - 2 * 20px) / 3);
+      max-width: calc((100% - 2 * 20px) / 3);
       &:nth-child(n+3) {
         margin-right: 0;
       }
@@ -52,7 +52,7 @@
     }
     @include media_interval($media400, $media640) {
       // 2 items
-      width: calc((100% - 20px) / 2);
+      max-width: calc((100% - 20px) / 2);
       &:nth-child(n+2) {
         margin-right: 0;
       }
