--- a/src/static/admin/scss/admin_fixes.scss
+++ b/src/static/admin/scss/admin_fixes.scss
@@ -51,11 +51,42 @@ input[type=number] {
   @include font-size(14px);
 }
 
-// правка иконки добавления related
+// правка иконок related
+.control-group .add-related,
+.inline-group .add-related,
+.control-group .related-lookup,
+.inline-group .related-lookup,
+.control-group .change-related,
+.inline-group .change-related {
+  padding: 4px;
+}
+
+.control-group .delete-related,
+.inline-group .delete-related {
+  display: inline-block;
+  overflow: hidden;
+  padding: 4px 4px 4px 0;
+  margin: 0;
+  width: 14px;
+  height: 14px;
+  text-indent: 200%;
+  white-space: nowrap;
+  vertical-align: middle;
+  border: 1px solid transparent;
+  background: url(/static/suit/bootstrap/img/glyphicons-halflings.png) no-repeat -311px 4px;
+  @include opacity(0.6);
+
+  &:hover {
+    @include opacity(1);
+  }
+}
+
 .control-group .add-related,
 .inline-group .add-related {
-  background-position: 6px -92px;
+  background-position: 4px -92px;
 }
+
+
 
 // не ограниченная высота textarea
 textarea.autosize {
