--- a/src/static/scss/mixins/_reset.scss
+++ b/src/static/scss/mixins/_reset.scss
@@ -1,3 +1,12 @@
+@-webkit-keyframes fontfix {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 // Based on [Eric Meyer's reset 2.0](http://meyerweb.com/eric/tools/css/reset/index.html)
 // Global reset rules.
 // For more specific resets, use the reset mixins provided below
@@ -27,15 +36,27 @@
     font: inherit;
     font-size: 100%;
     vertical-align: baseline;
-    text-rendering: optimizeLegibility;
   }
 
   html {
     line-height: 1;
     font-size: 16px;
-    -webkit-text-size-adjust: none;
+  }
+
+  body {
     -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: none;
     -moz-osx-font-smoothing: grayscale;
+    font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    font-weight: normal;
+
+    // fontfix Chrome
+    -webkit-animation-delay: 0.1s;
+    -webkit-animation-name: fontfix;
+    -webkit-animation-duration: 0.1s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: linear;
 
     @media only screen and (-webkit-min-device-pixel-ratio: 1.25),
     only screen and (min-device-pixel-ratio: 1.25),
@@ -44,6 +65,7 @@
       -webkit-font-smoothing: subpixel-antialiased;
     }
   }
+
   ol, ul {
     list-style: none;
   }
