--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -2,6 +2,16 @@
 
 @include global-reset;
 
+// fontfix
+@include keyframes(fontfix) {
+  from {
+    @include opacity(1);
+  }
+  to {
+    @include opacity(1);
+  }
+}
+
 html, body {
   height: 100%;
 }
@@ -12,6 +22,7 @@ body {
   line-height: 1.2;
   @include no_fontsize;
   @include font_default;
+  @include animation(fontfix 0.1s linear 0.1s 1);
 }
 
 // Скрытый элемент
